[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "Py2D"
version = "0.0.0"
description = "Python solver for incompressible 2D Navier-Stokes equations."
authors = [
  { name="Karan Jakhar", email="karanj@uchicago.edu" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "jax",
    "jaxlib",
]

[project.urls]
"Homepage" = "https://github.com/envfluids/py2d"
"Bug Tracker" = "https://github.com/envfluids/py2d/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["py2d", "py2d.*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["py2d.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
